homepage/static/css/homepage.css
.intro-header {
    text-align: center;
    background-image: linear-gradient(to top, rgba(46, 48, 60, 0.8), rgba(46, 48, 60, 0.8)), url("/static/img/ephemere.jpg");
    background-size: cover;
    background-attachment: fixed, fixed;
}

.intro-message {
    position: relative;
    padding-top: 16em;
    padding-bottom: 8em;
}

.footer {
    text-align: center;
    background-image: linear-gradient(to top, rgba(46, 48, 60, 0.8), rgba(46, 48, 60, 0.8)), url("/static/img/amphi.jpg");
    background-size: cover;
    background-attachment: fixed, fixed;
}

svg {
  display: block;
  width: 100%;
  height: 100px;
}

.landing {
    color: #ffffff;
    /*font-family: Raleway, Helvetica, sans-serif;*/
    font-weight: 600;
    font-size: 4em;
    letter-spacing: 0.1em;
    text-transform: uppercase;
}

.subcontainer {
  padding-top: 4em;
  padding-bottom: 4em;
}

.subtitle {
    color: #ffffff;
/*    font-family: Raleway, Helvetica, sans-serif;*/
    font-weight: 600;
    font-size: 2em;
    letter-spacing: 0.1em;
    text-transform: uppercase;
}

.subtext {
 /* font-family: Raleway, Helvetica, sans-serif;*/
  color: #ffffff;
  font-size: 1.5em;
  line-height: 1.6;
}

.mainnav {
    border-bottom: 2px solid #dc9c67;
    margin-top: 30px;
    margin-bottom: 30px;
}

.btn-lg.round {
  border-radius: 24px;
}

.footer a:link {
    color: #ffffff;
}

.footer {
  display: block;
  text-align: center;
}

.copynope {
    white-space: nowrap;
    margin: 2em;
}

.copynope > a {
    text-decoration: none;
    color: #dc9c67;
    display: inline-block;
    margin: 1em;
}

.navbar-nav > li {
    float: left;
    position: relative;
    margin-right: 20px;
    font-weight: 600;
}

@media screen and (min-width: 990px) {
    .navbar-dark .navbar-nav .active a::after {
        border-bottom: 3px solid #fff;
        bottom: -8px;
        content: " ";
        left: 0;
        position: absolute;
        right: 0;
    }
    
    .lorem-right {
        margin-left: 36%;
    }

    .lorem-left {
        margin-right: 36%;
    } 
}

.border-light {
    box-shadow: 3px 3px 0 #ce7227, -3px -3px 0 #ce7227;
}

.border-dark {
    box-shadow: 3px 3px 0 #343a40, -3px -3px 0 #343a40;
}

